@@ -14,7 +14,7 @@
 
    This library is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	 See the GNU
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    Lesser General Public License for more details.
 
    You should have received a copy of the GNU Lesser General Public
@@ -97,6 +97,11 @@ void NSCFInitialize (void)
 - (oneway void) release
 {
   CFRelease(self);
+}
+
+- (NSUInteger) retainCount
+{
+  return CFGetRetainCount (self);
 }
 
 - (NSUInteger) hash
